<resources>
    <string name="app_name">CFCN</string>
    <string name="group_name">Chelsea Fan Club Nepal</string>

    <string name="title_activity_splash">Welcome</string>

    <string name="image_attribution"> "West Stand" image by  Vespa125125CFC.</string>
    <string name="lion_head_attribution">"Lion head" image by sdfasdfasasdfasd.</string>
    <string name="copyright_disclaimer">

        © Copyright CFCN. All rights reserved.\n\n

        The app "CFCN" is strictly for informational and entertainment purposes and in no way represents "Chelsea Football Club" or
        any other chelsea fan websites or their views. \n \n

        The images, logos and names of the clubs used in the app belong to the respective clubs
        and we do not intend to infringe the copyright of any of these entities and we hereby credit them to the owner.

        The external links that can be opened from the app in no way represents this app as an official partner or affiliate of the opened news portal or club website.

        For any notices or copyright infringement issues, please contact us at webbisswiftapps@gmail.com so that we can resolve issues if any.

    </string>

    <string name="about_group"> Chelsea Fan Club, Nepal is an unofficial Chelsea fan club from Nepal registered in 2016. We organize different events and match screenings and also various social works.
    Learn more about us and join us by clicking the link below.
    </string>


    <string name="chelsea">Chelsea</string>
    <string name="chelsea_fc">Chelsea Football Club</string>
    <string name="founded">Founded 1905</string>
    <string name="nickname">"The Blues"</string>
    <string name="club_address">Fulham Road, London, England</string>
    <string name="stadium">Stadium</string>
    <string name="stadium_name">Stamford Bridge</string>
    <string name="capacity">41,631</string>
    <string name="pitch_dim">103 x 67m</string>
    <string name="uefa_ranking">UEFA Ranking</string>
    <string name="welcome">Welcome!</string>
    <string name="desc_region_select"> Please select your country/region from the list.
        We use this information to show you TV channel information for upcoming matches.
    </string>

    <string name="skipDesc">
        If you don\'t see your country/region in the list, we currently do not support your region. Please select International to get live information from
        online and international media.
               \n \n NOTE: You can select or change this option later from settings. \n \n
    </string>

    <string name="dont_show_tv_info_again"> Don\'t show this to me again.
    </string>

    <!-- menu strings -->
    <string name="about_us">About Us</string>
    <string name="disclaimer">Copyright &amp; Disclaimer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="other">Other</string>
    <string name="share">Share</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate in Play Store</string>
    <string name="players">Team</string>
    <string name="home">Latest</string>
    <string name="team">Club</string>
    <string name="more">More</string>
    <string name="competitions">Competitions</string>
    <string name="social">Social Media</string>
    <string name="settings">Settings</string>
    <string name="cfcn_events">CFCN Events &amp; Notifications</string>


    <!-- API Key -->
    <string name="youtube_api_key">AIzaSyDa31SHAlwK6jvcLrV4XQsgHcQxNxGBzjA</string>
    <string name="crash_text">Oops, the app crashed.</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">wy82OegbeWTvKRCyKZX8unvnh</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">klqm4Hfy8fX7D6AKnXVUeIBNmkOKd5BHCSSDWYscwIW3q5hfCP</string>



    <!-- Admob-->
    <string name="app_id">ca-app-pub-5865133861479449~5545798392</string>
    <string name="overview_ad_unit_id">ca-app-pub-5865133861479449/6947220413</string>
    <string name="overview_ad_unit_bottom">ca-app-pub-5865133861479449/5342618410</string>
    <string name="news_list_ad_unit_large">ca-app-pub-5865133861479449/1433720031</string>
    <string name="season_banner_small">ca-app-pub-5865133861479449/5248965670</string>




    <!-- Menu -->


    <!-- Attribution -->
    <string name="west_stand_attribute">belongs to Vespa125125CFC.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


    <!-- Settings -->
    <string name="notifications">Notifications</string>
    <string name="notify_news_title">News</string>
    <string name="notify_news">Notify me when new news and videos are available.</string>

    <string name="notify_mts_title">Match Reminder</string>
    <string name="notify_match_to_start">Notify me when match is about to start, generally minutes before the match starts.</string>

    <string name="notify_me_title">Match Events</string>
    <string name="notify_match_events_gen">Notify me about general match events (Kick off, Half time, Full time)</string>
    <string name="notify_match_lineups">Notify me about match line ups.</string>
    <string name="notify_match_events_cards">Notify me about cards (Yellow card, Red cards)</string>
    <string name="notify_match_subs">Notify me about substitutions.</string>
    <string name="notify_match_events_goals">Notify me about goals, penalties &amp; misses.</string>
    <string name="notify_match_pen_live">Notify me about penalty shootout.</string>
    <string name="title_activity_settings">Settings</string>

    <string name="tv_info">Match Live TV Info</string>

    <string name="default_notification_channel_id">212</string>


</resources>
