<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_light_gray"
            />
        <item
            android:id="@+id/nav_players"
            android:title="@string/players"
            android:icon="@drawable/ic_players_light_gray"
            />


    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/about_us" />

           <!-- <item
                android:id="@+id/nav_social"
                android:title="@string/social" /> -->
           <!-- <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" /> -->

            <item
                android:id="@+id/nav_disclaimer"
                android:title="@string/disclaimer" />

        </menu>
    </item>
</menu>